--- a/src/component/experience/Experience.css
+++ b/src/component/experience/Experience.css
@@ -50,8 +50,20 @@
 
 /* ================= Media Queries (Mobile Devices) ================= */
 @media screen and (max-width: 600px){
+    .experience-container > div{
+        width: 99%;
+        padding: 2rem 0.7rem;
+        margin: 0 auto;
+    }
     .experience-container{
-        gap: 1rem;
+        gap: 2rem;
+    }
+    .experience-details{
+        display: flex;
+        gap: 0.2rem;
+    }
+    .experience-icon{
+        font-size: 0.8rem;
     }
     
 }
