--- a/src/component/experience/Experience.css
+++ b/src/component/experience/Experience.css
@@ -9,15 +9,16 @@
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
+    text-align: center;
 }
 .experience-container > div:hover{
     background: transparent;
     border-color: var(--color-primary-variant);
     cursor: default;
 }
-.experience-container > div h3{
+.experience-container > div h4{
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 0.1rem;
     color: var(--color-primary);
 }
 .experience-content{
